Refactor: Expression cleanup (lambdas, etc.)